--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,28 @@
   color: red;
   font-size: 2em;
 }
+
+.delete-list {
+  float: right;
+  margin-right: -10px;
+  opacity: 0.50;
+}
+
+
+.header {
+  font-size: 1.53em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.list {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.644);
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+.checked {
+  color: rgb(22, 177, 22);
+  text-decoration: line-through;
+  font-weight: bold;
+}
